<resources>
    <string name="app_name">The Avengers</string>
    <string name="etPhoneNumber">Enter Phone Number</string>
    <string name="etPassword">Enter Password</string>
    <string name="log_in">Log-In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register_yourself">Register Yourself</string>
    <string name="boilerplate">boilerplate</string>
    <string name="preference_file_name">avengersCache</string>
    <string name="sign_out">Sign Out</string>
</resources>